<resources>
    <string name="app_name">iSnow</string>
    <string name="phone_number">Enter Phone Number, Email, or Member ID</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="member_id">Phone Number, Email, or Member ID</string>
    <string name="verify">Verify Code</string>

    <string name="didn_t_receive_the_otp">Didn\'t Receive Code?</string>
    <string name="resend">Resend</string>
    <string name="code">Enter the code that was sent to Your phone number</string>

    <string name="transactions">Transactions</string>
    <string name="account">Account</string>

    <string name="borrow">Borrow</string>
    <string name="borrow_amount">Enter amount to borrow</string>
    <string name="loan_product">Enter loan product</string>
    <string name="loan_p">Loan Product</string>
    <string name="payment_method">Enter Payment Method</string>
    <string name="cont_amount">Enter amount to contribute</string>
    <string name="cont_product">Enter contribution type</string>
    <string name="cont_p">Contribution Product</string>

    <string name="pay">Payment Method</string>
    <string name="repay">Deposit</string>
    <string name="repay_type">Deposit Type</string>
    <string name="repay_amount">Enter amount to repay</string>
    <string name="recent">Recent Transactions</string>
    <string name="no_recent">No Recent Transactions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Mr. Paul Mugabi</string>
    <string name="id">Member ID: IS0000001</string>
    <string name="lo">Loan Amount: </string>
    <string name="loan">UGX. 150,000</string>
    <string name="contribute">Total Contributions: </string>
    <string name="contribution">UGX. 150,000,000</string>
    <string name="amount">Amount (UGX)</string>
    <string name="pin">PIN</string>
    <string name="pin_change">Change PIN</string>
    <string name="edit">Edit Profile</string>
    <string name="new_name">Enter New Member Name</string>
    <string name="new_gen">Enter Your gender</string>
    <string name="save">Save Profile</string>

    <string name="select">Select Investment Club</string>

    <string name="logout">LogOut</string>
    <string name="finish">Finish</string>
</resources>