<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loan.BorrowFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_40sdp"
        android:src="@drawable/back"
        app:civ_border_color="@color/text_title_color"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_margin="@dimen/_25sdp"
        android:src="@drawable/loan"
        app:civ_border_color="@color/text_title_color"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView"
        app:tint="@color/text_title_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvPayLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/payment_method"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productLy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payLy"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/lato_black"
        android:background="#E6E3E3"
        android:layout_marginTop="@dimen/_5sdp"
        app:endIconMode="dropdown_menu"
        android:hint="@string/pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvPayLy">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:layout_margin="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvProductLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/loan_product"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productLy"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#E6E3E3"
        app:endIconMode="dropdown_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvProductLy">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/loan_p"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtvPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/borrow_amount"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payLy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLy"
        android:layout_width="match_parent"
        android:padding="2dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/mtvPhoneLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="10"
            android:singleLine="true"
            android:maxLines="1"
            android:textSize="@dimen/_15ssp"
            android:hint="@string/amount"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBorrow"
        style="@style/PrimaryBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/lato_light"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>